[gd_scene load_steps=12 format=3 uid="uid://btmhrda1vfqfd"]

[ext_resource type="Script" uid="uid://d17qum8nm311a" path="res://scripts/main/main.gd" id="1_7mycd"]
[ext_resource type="PackedScene" uid="uid://bpgabjuktqfs4" path="res://scenes/board/board.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cn67r6mghyu06" path="res://scenes/piece/piece.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bggfmoyu0ml3d" path="res://scenes/ui/common_dialog.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://05d8ivxdfet5" path="res://scenes/piece_stand/piece_stand.tscn" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://dynaos3fx5qx7" path="res://scripts/ui/check_label.gd" id="4_lquwl"]
[ext_resource type="PackedScene" uid="uid://v4mqg4kxgku2" path="res://scenes/ui/move_history_panel.tscn" id="5_272bh"]
[ext_resource type="PackedScene" uid="uid://be222qmjtk0ub" path="res://scenes/ui/win_rate_bar.tscn" id="7_b1x3f"]
[ext_resource type="Script" uid="uid://ds7fxclfo6jh0" path="res://scripts/audio/audio_stream_player.gd" id="8_yyfjg"]

[sub_resource type="LabelSettings" id="LabelSettings_1bvp3"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_lquwl"]
font_size = 128
font_color = Color(1, 0.2, 0.2, 1)
outline_size = 32

[node name="Main" type="Node2D"]
script = ExtResource("1_7mycd")

[node name="Board" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(485, 135)
piece_scene = ExtResource("2_0xm2m")

[node name="PlayerPieceStand" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(1162.5, 297.5)

[node name="EnemyPieceStand" parent="." instance=ExtResource("4_1bvp3")]
position = Vector2(347.5, 112.5)
is_enemy = true

[node name="MoveHistoryPanel" parent="." instance=ExtResource("5_272bh")]
offset_left = 1300.0
offset_top = 112.5
offset_right = 1525.0
offset_bottom = 787.5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 359.0
offset_bottom = 85.0
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "新規対局"

[node name="UndoButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "待った"

[node name="ResignButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "投了"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.0
offset_top = 56.0
offset_right = 36.0
offset_bottom = 90.0
grow_horizontal = 2
text = "先手番"
label_settings = SubResource("LabelSettings_1bvp3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -44.5
offset_right = 64.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
text = "王手"
label_settings = SubResource("LabelSettings_lquwl")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_lquwl")

[node name="WinRateBar" parent="." instance=ExtResource("7_b1x3f")]
offset_left = 462.5
offset_top = 810.0
offset_right = 1137.5
offset_bottom = 845.0

[node name="CommonDialog" parent="." instance=ExtResource("3_h2yge")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("8_yyfjg")
